# templates

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  invoke-local.sh
.github/workflows/: _e2e.yaml  _invoke.yaml  ci.yaml  e2e-tests.yaml  invoke-all.yaml  manual-workflow.yml  nightly.yaml  test-templates.yaml
.testing/: README.md  run-e2e.sh
.testing/python/keycloak-auth/: test.sh
.testing/python/mcp-ollama-rag/: test.sh  test_mcp_client.py
go/blog/: README.md  function_test.go
go/blog/hugo/: go.mod  go.sum  hugo.toml
go/echo-cloudevents/: function.go
go/hello/: function.go  function_test.go
node/hello/: index.js
node/hello/test/: integration.js  unit.js
python/echo-cloudevents/: pyproject.toml
python/echo-cloudevents/function/: func.py
python/echo-cloudevents/tests/: test_func.py
python/echo/function/: func.py
python/echo/tests/: test_func.py
python/hello/: README.md
python/hello/function/: func.py
python/hello/tests/: test_func.py
python/keycloak-auth/: README.md  pyproject.toml
python/keycloak-auth/function/: func.py  keycloak_auth.py
python/keycloak-auth/tests/: test_func.py
python/mcp/: README.md
python/mcp-ollama/: README.md
python/mcp-ollama-rag/: README.md  pyproject.toml
python/mcp-ollama-rag/client/: client.py
python/mcp-ollama-rag/function/: func.py  parser.py
python/mcp-ollama-rag/tests/: test_func.py
python/pdf-processing/: README.md  pyproject.toml
python/pdf-processing/function/: func.py  pdf_ops.py
python/pdf-processing/tests/: test_func.py
python/sqlite/: README.md  pyproject.toml
python/sqlite/function/: database.py  func.py
python/sqlite/tests/: test_func.py
rust/echo/src/: handler.rs
rust/hello/src/: handler.rs
(+3 files in other folders)
