[project]
name = "function"
description = "HTTP function with SQLite database"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
  "pysqlite3-binary>=0.5.4",
]
authors = [
  { name = "Your Name", email = "you@example.com" },
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
